--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,6 +7,22 @@
   min-height: 100vh;
 }
 
+.questions {
+  display: inherit;
+  justify-content: inherit;
+  align-items: inherit;
+}
+
+.questions p {
+  position: relative;
+  margin: 0.5rem;
+  padding: 0.5rem 1rem;
+  background-color: rgba(var(--callout-rgb), 0.5);
+  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
+  border-radius: var(--border-radius);
+  font-size: 3rem;
+}
+
 .description {
   display: inherit;
   justify-content: inherit;
@@ -77,15 +93,15 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  padding: 4rem 0;
+  padding: 0.5rem 0;
 }
 
 .center::before {
   background: var(--secondary-glow);
   border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
+  width: 280px;
+  /* height: 360px; */
+  /* margin-left: -400px; */
 }
 
 .center::after {
@@ -98,7 +114,7 @@
 .center::before,
 .center::after {
   content: '';
-  left: 50%;
+  left: 30%;
   position: absolute;
   filter: blur(45px);
   transform: translateZ(0);
